--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-REACT_APP_SOCIAL_MEDIA_INSTAGRAM_URL=https://www.instagram.com
+REACT_APP_SOCIAL_MEDIA_INSTAGRAM_URL=
+REACT_APP_SOCIAL_MEDIA_FACEBOOK_URL=
+REACT_APP_SOCIAL_MEDIA_WHATSAPP_URL=
+REACT_APP_SOCIAL_MEDIA_EMAIL_URL=
+REACT_APP_SOCIAL_MEDIA_CONTATO_URL=
